# Pyper

./: LICENSE  License.md  Main.py  README.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: publish-to-test-pypi.yml  python-publish.yml
Pyper/: License.md  Pyper_Interface.py  pyper.c  pyper.html  pyper.py
PyperCLI/: pyper_cli.py
PyperFramework/: Commands.py  FileManager.py  Framework.py  Messages.py  PipeLine.py  Pyper_Thread.py
PyperFramework/Phases/: Phase_1_File_Reader.py  Phase_2_SRC_To_AST.py
cli/: tool.py
src/: pyper.py
tests/: dev.py  tool-test.py
